--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIPHY BOI</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./Logo.png" type="image/x-icon">
 </head>
 <body>
     <!--Create a Nav Bar for icon-->
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo">GIPHY<strong>CODEZ</strong></div>
-       <!-- <ul class="links">
+       <!-- Might add on this later <ul class="links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#work">Work</a></li>
@@ -55,6 +56,10 @@
     
     
     <!--Footer-->
+    <footer>
+        <p>All Rights Reserved</p>
+        <p>&#169; 2021 Nirmith Victor D'Almeida</p>
+    </footer>
 </body>
 <script src="./script.js"></script>
 </html>
