--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo">GIPHY<strong>CODEZ</strong></div>
-       <!-- Might add on this later <ul class="links">
+       <!-- Might add on this later-->
+        <!--<ul class="links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#work">Work</a></li>
