--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <footer>
         <p>All Rights Reserved</p>
         <p>&#169; 2021 Nirmith Victor D'Almeida</p>
+        <p>        <img src="./PoweredBy_200_Horizontal_Light-Backgrounds_With_Logo.gif">        </p>
     </footer>
 </body>
 <script src="./script.js"></script>
